--- a/nft-preview-card-component-main/style.css
+++ b/nft-preview-card-component-main/style.css
@@ -84,7 +84,7 @@ footer {
   align-items: center;
   gap: 1.3rem;
   padding: 1.5rem 0 1rem;
-  border-top: 1px solid;
+  border-top: 1px solid hsl(215, 32%, 27%);
 }
 .author-avatar {
   width: 3rem;
