--- a/nft-preview-card-component-main/style.css
+++ b/nft-preview-card-component-main/style.css
@@ -39,6 +39,28 @@ body {
   box-shadow: 0 50px 100px rgba(0, 0, 0, 0.2);
 }
 
+.main-img-box {
+  position: relative;
+}
+.hover-img-icon{
+  position: absolute;
+  transition: all 0.3s ease-out;
+  background-color: hsla(178, 100%, 50%, 0.4);
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  opacity: 0; 
+}
+.hover-img-icon img{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.hover-img-icon:hover {
+  opacity: 1;
+}
 .main-img-equilibrium {
   width: 100%;
   border-radius: 10px;
@@ -54,6 +76,10 @@ body {
   color: hsl(0, 0%, 100%);
   font-weight: 600;
   font-size: 2.1rem;
+  transition: all 0.3s;
+}
+.title:hover{
+  color: hsl(178, 100%, 50%);
 }
 .description {
   color: hsl(215, 51%, 70%);
@@ -99,4 +125,8 @@ footer p {
 }
 footer span {
   color: hsl(0, 0%, 100%);
+  transition: all 0.3s;
+}
+footer span:hover{
+  color: hsl(178, 100%, 50%);
 }
