Fixed the alternative text description of images

--- a/nft-preview-card-component-main/style.css
+++ b/nft-preview-card-component-main/style.css
@@ -93,7 +93,7 @@ body {
   line-height: 1.5;
   font-weight: 400;
 }
-main {
+.main-infos {
   display: flex;
   justify-content: space-between;
   align-items: center;
