--- a/single-price-grid-component-master/style.css
+++ b/single-price-grid-component-master/style.css
@@ -13,13 +13,17 @@ body {
   background-color: hsl(204, 43%, 93%);
   padding: 2.5rem;
   font-size: 1.6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
 }
 
 /***************************/
 /*Reusable classes*/
 .container {
   max-width: 70rem;
-  margin: auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   border-radius: 7px;
