--- a/todo-app-main/src/css/App.style.css
+++ b/todo-app-main/src/css/App.style.css
@@ -13,6 +13,7 @@ body {
   height: 100vh;
   background-image: url("../images/bg-desktop-dark.jpg");
   background-repeat: no-repeat;
+  background-position: top center;
   background-size: contain;
   background-color: hsl(235, 21%, 11%);
 }
@@ -37,54 +38,67 @@ body {
   letter-spacing: 15px;
   color: white;
 }
-.todo-input {
+.todo-form {
   background-color: hsl(235, 24%, 19%);
+  border-radius: 5px;
   padding: 12px 15px;
   display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 35px;
 }
 .todo-input--el {
   background-color: inherit;
   border: none;
   width: 100%;
   height: 100%;
+  padding: 5px 0;
+  outline: none;
+  color: hsl(234, 39%, 85%);
+  font-size: inherit;
+  font-family: inherit;
 }
-.round {
-  position: relative;
-}
-.round label {
-  border: 2px solid hsl(237, 14%, 26%);
-  border-radius: 50%;
-  cursor: pointer;
-  height: 28px;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 28px;
-}
-.round label:after {
-  border: 2px solid #fff;
-  border-top: none;
-  border-right: none;
-  content: "";
-  height: 6px;
-  left: 7px;
-  opacity: 0;
-  position: absolute;
-  top: 8px;
-  width: 12px;
-}
-#checkbox {
-  appearance: none;
+.todo-input--el::placeholder {
+  color: hsl(234, 11%, 52%);
 }
 .todo {
   margin-top: 17px;
   background-color: hsl(235, 24%, 19%);
+  border-radius: 5px;
 }
 .todo-item {
-  border-bottom: 1px solid rgba(147, 148, 165, 0.747);
-  padding: 1rem;
+  border-bottom: 1px solid hsl(233, 14%, 35%);
   list-style: none;
   color: hsl(234, 39%, 85%);
   font-size: 16px;
   letter-spacing: 0.02em;
+  display: flex;
+  align-items: center;
+  padding: 14px 20px;
+  gap: 20px;
+}
+.todo-status {
+  border-radius: 50%;
+  border: 1px solid hsl(233, 14%, 35%);
+  height: 23px;
+  width: 25px;
+  background-color: hsl(235, 24%, 19%);
+  position: relative;
+}
+.todo-completed {
+  background: linear-gradient(to left, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
+}
+.todo-status--label {
+  position: relative;
+  left: 6px;
+  top: 5px;
+}
+.check-icon {
+  position: absolute;
+}
+#new-todo {
+  opacity: 0;
+  height: 23px;
+  width: 30px;
+  transform: translate(-2px, -1px);
 }
